Actualizado, empezamos modificacion de la explicacion de la practica 3

--- a/Practica3/Makefile
+++ b/Practica3/Makefile
@@ -1,7 +1,7 @@
 all: pdf
 
 
-pdf: Parte1_explicacion.pdf Parte2_explicacion.pdf
+pdf: Parte1_explicacion.pdf Parte2_explicacion.pdf Parte3_explicacion.pdf Parte4_explicacion.pdf
 
 Parte1_explicacion.pdf: Parte1/explicacion.tex
 	cd Parte1; make pdf
@@ -9,6 +9,14 @@ Parte1_explicacion.pdf: Parte1/explicacion.tex
 Parte2_explicacion.pdf: Parte2/explicacion.tex
 	cd Parte2; make pdf
 
+Parte3_explicacion.pdf: Parte2/explicacion.tex
+	cd Parte3; make pdf
+
+Parte4_explicacion.pdf: Parte2/explicacion.tex
+	cd Parte4; make pdf
+
 clean:
 	cd Parte1; make clean
 	cd Parte2; make clean
+	cd Parte3; make clean
+	cd Parte4; make clean
