--- a/Practica1/Makefile
+++ b/Practica1/Makefile
@@ -11,7 +11,8 @@ explicacion.pdf: explicacion.tex $(PNGIMAGES)
 
 # define a suffix rule for .svg -> .png
 %.png: %.svg
-	inkscape --export-area-drawing -z -e="/home/andoni/desarrollo/facu/ExpArquitectura/Practica1/$*.png" "/home/andoni/desarrollo/facu/ExpArquitectura/Practica1/$*.svg"
+	#inkscape --export-area-drawing -z -e="/home/andoni/desarrollo/facu/ExpArquitectura/Practica1/$*.png" "/home/andoni/desarrollo/facu/ExpArquitectura/Practica1/$*.svg"
+	inkscape --export-area=0:790:600:1122  -z -e="/home/andoni/desarrollo/facu/ExpArquitectura/Practica1/$*.png" "/home/andoni/desarrollo/facu/ExpArquitectura/Practica1/$*.svg"
 
 clean:
 	rm -rf explicacion.pdf *.out *.backup *.dvi *.log *.nav *.snm *.toc *.vrm *.aux imgs/*.png
