Actualizado, preparando para los cambios en la practica 1 actualizada

--- a/Practica1/Makefile
+++ b/Practica1/Makefile
@@ -8,11 +8,12 @@ pdf: explicacion.pdf
 
 explicacion.pdf: explicacion.tex $(PNGIMAGES)
 	pdflatex explicacion.tex
+	rm explicacion.pdf
+	pdflatex explicacion.tex
 
 # define a suffix rule for .svg -> .png
 %.png: %.svg
-	#inkscape --export-area-drawing -z -e="/home/andoni/desarrollo/facu/ExpArquitectura/Practica1/$*.png" "/home/andoni/desarrollo/facu/ExpArquitectura/Practica1/$*.svg"
-	inkscape --export-area=0:790:600:1122  -z -e="/home/andoni/desarrollo/facu/ExpArquitectura/Practica1/$*.png" "/home/andoni/desarrollo/facu/ExpArquitectura/Practica1/$*.svg"
+	inkscape --export-area=0:0:680:400 -o "$*.png" "$*.svg"  --export-type=png
 
 clean:
 	rm -rf explicacion.pdf *.out *.backup *.dvi *.log *.nav *.snm *.toc *.vrm *.aux imgs/*.png
